<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.backbase.buildingblocks</groupId>
        <version>15.2.0</version>
        <artifactId>service-sdk-starter-core</artifactId>
        <relativePath />
    </parent>

    <groupId>net.trexis.experts</groupId>
    <artifactId>payment-order-integration-service</artifactId>
    <version>1.1.0-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>Trexis :: Backbase :: Payment Order Integration Service</name>

    <properties>
        <!-- GENERAL PROJECT SETTINGS -->
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <!-- SPEC -->
        <swagger-annotations.version>1.6.1</swagger-annotations.version>
        <jackson-databind-nullable.version>0.2.1</jackson-databind-nullable.version>
        <jsr305.version>3.0.2</jsr305.version>
        <spec.dependencies.path>${project.build.directory}/dependencies</spec.dependencies.path>

        <!-- treXis -->
        <trexis-bom.version>1.1.0-SNAPSHOT</trexis-bom.version>

        <!-- BACKBASE -->
        <dbs.version>2023.02.18-LTS</dbs.version>
        <service-sdk-starter-core.version>15.2.0</service-sdk-starter-core.version>
        <payment-order-service.version>1.3.400.1</payment-order-service.version>
        <boat-maven-plugin.version>0.15.8</boat-maven-plugin.version>
        <ignored-lint-rules>150,219,215,218,166,136,174,235,107,171,224,143,151,129,146,147,172,145,115,132,120,134,183,154,105,104,130,118,110,153,101,176,116,M009,H002,M010,H001,M008,S005,S006,S007,M011,M0012</ignored-lint-rules>
        <blade.version>4.21.0</blade.version>

        <!-- Code coverage -->
        <jacoco-maven.version>0.8.8</jacoco-maven.version>
        <jacoco.ut.execution.data.file>${project.build.directory}/coverage-reports/jacoco.exec</jacoco.ut.execution.data.file>
        <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco-ut/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>

    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.backbase.buildingblocks</groupId>
                <version>${service-sdk-starter-core.version}</version>
                <artifactId>service-sdk-starter-core</artifactId>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.backbase</groupId>
                <artifactId>backbase-bom</artifactId>
                <version>${dbs.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>net.trexis.experts</groupId>
                <artifactId>experts-bom</artifactId>
                <version>${trexis-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- BACKBASE -->
        <dependency>
            <groupId>com.backbase.buildingblocks</groupId>
            <artifactId>auth-security</artifactId>
        </dependency>
        <dependency>
            <groupId>com.backbase.buildingblocks</groupId>
            <artifactId>communication</artifactId>
        </dependency>

        <!-- SPEC -->
        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-annotations</artifactId>
            <version>${swagger-annotations.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openapitools</groupId>
            <artifactId>jackson-databind-nullable</artifactId>
            <version>${jackson-databind-nullable.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>${jsr305.version}</version>
        </dependency>

        <!-- TREXIS -->
        <dependency>
            <groupId>net.trexis.experts</groupId>
            <artifactId>finite-client</artifactId>
        </dependency>
        <dependency>
            <groupId>com.finite.api</groupId>
            <artifactId>utilities</artifactId>
        </dependency>
        <dependency>
            <groupId>net.trexis.experts.specs</groupId>
            <artifactId>ingestion-api</artifactId>
        </dependency>

        <!-- MISC -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>


        <!-- TEST -->
        <dependency>
            <groupId>com.backbase.buildingblocks</groupId>
            <artifactId>service-sdk-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- BLADE -->
            <plugin>
                <groupId>com.backbase.oss</groupId>
                <artifactId>blade-maven-plugin</artifactId>
                <version>${blade.version}</version>
                <configuration>
                    <openBrowserOnStartup>false</openBrowserOnStartup>
                    <detectAndConfigureSpringConfigLocation>true</detectAndConfigureSpringConfigLocation>
                    <systemProperties>
                    </systemProperties>
                </configuration>
            </plugin>

            <!-- WAR rename -->
            <plugin>
                <groupId>com.backbase.buildingblocks</groupId>
                <artifactId>service-sdk-build-utils-maven-plugin</artifactId>
                <version>${service-sdk-starter-core.version}</version>
                <executions>
                    <execution>
                        <id>rename-executable-war</id>
                        <phase>package</phase>
                        <goals>
                            <goal>move-file</goal>
                        </goals>
                        <configuration>
                            <source>${project.artifactId}-${project.version}-exec.jar-classes.war</source>
                            <dest>${project.artifactId}.jar</dest>
                            <attach>true</attach>
                        </configuration>
                    </execution>
                </executions>
            </plugin>


            <!-- SPECIFICATION PLUGINS -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack-backbase-openapi-spec</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>com.backbase.dbs.paymentorder</groupId>
                                    <artifactId>payment-order-service</artifactId>
                                    <version>${payment-order-service.version}</version>
                                    <classifier>api</classifier>
                                    <outputDirectory>${project.build.directory}/yaml</outputDirectory>
                                    <type>zip</type>
                                    <overWrite>true</overWrite>
                                </artifactItem>
                            </artifactItems>
                            <includes>**/*.yaml, **/*.json</includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.backbase.oss</groupId>
                <artifactId>boat-maven-plugin</artifactId>
                <version>${boat-maven-plugin.version}</version>
                <executions>
                    <!-- Generate OpenAPI interface stubs. -->
                    <execution>
                        <id>payment-order-integration-outbound-api</id>
                        <goals>
                            <goal>generate-spring-boot-embedded</goal>
                        </goals>
                        <phase>generate-sources</phase>
                        <configuration>
                            <inputSpec>
                                ${basedir}/target/yaml/payment/payment-order-integration-outbound-api-v2.2.1.yaml
                            </inputSpec>
                            <apiPackage>com.backbase.dbs.payment.payment-order-integration-outbound.api</apiPackage>
                            <modelPackage>com.backbase.dbs.payment.payment-order-integration-outbound.model</modelPackage>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- CODE COVERAGE -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven.version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/com/backbase/dbs/**/*</exclude>
                        <exclude>**/net/trexis/experts/cursor/cursor_service/**/*</exclude>
                        <exclude>**/net/trexis/experts/ingestion_service/**/*</exclude>
                        <exclude>**/net/trexis/experts/payments/configuration/**/*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${jacoco.ut.execution.data.file}</destFile>
                        </configuration>
                    </execution>

                    <execution>
                        <id>check</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <dataFile>${jacoco.ut.execution.data.file}</dataFile>
                            <rules>
                                <rule>
                                    <element>CLASS</element>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.00</minimum>
                                        </limit>
                                        <limit>
                                            <counter>BRANCH</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.00</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>

                    <!-- attached to Maven test phase -->
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        --add-opens java.base/java.time=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>finiteapi-releases</id>
            <name>libs-release</name>
            <url>https://finiteapi.jfrog.io/artifactory/libs-release-local</url>
        </repository>
        <snapshotRepository>
            <id>finiteapi-snapshots</id>
            <name>libs-snapshots</name>
            <url>https://finiteapi.jfrog.io/artifactory/libs-snapshots-local</url>
        </snapshotRepository>
    </distributionManagement>
</project>
